lambda-appsync-proc/tests/fail/invalid_args.stderr
error[E0308]: mismatched types
 --> tests/fail/invalid_args.rs:7:24
  |
6 | #[appsync_operation(mutation(createPlayer))]
  | -------------------------------------------- arguments to this function are incorrect
7 | async fn create_player(name: i32) -> Result<Player, AppsyncError> {
  |                        ^^^^- help: try using a conversion method: `.to_string()`
  |                        |
  |                        expected `String`, found `i32`
  |
note: associated function defined here
 --> tests/fail/invalid_args.rs:3:1
  |
3 | appsync_lambda_main!("../../../../schema.graphql");
  | ^^^^^^^^^^^^^^^^^^^^^----------------------------^
  = note: this error originates in the macro `appsync_lambda_main` (in Nightly builds, run with -Z macro-backtrace for more info)
